# game

./: .gitignore  CMakeLists.txt  Makefile  play  play_game  todo.md
assets/: playerSheet.png:Zone.Identifier  playerSprite1.png:Zone.Identifier  slashSheet.png:Zone.Identifier  standingSheet.png:Zone.Identifier  sword.png:Zone.Identifier
header/: ability.h  animation.h  collision.h  collisionManager.h  deltaTime.h  enemy.h  enemyPool.h  entity.h  game.h  gridSystem.h  hitbox.h  includes.h  obstacles.h  partitions.h  player.h  pool.h  quadtree.h  slime.h  utility.h
header/battle/: animation.h  collision.h  collisionManager.h  entity.h  game.h  gridSystem.h  menu.h  partitions.h  pool.h  utility.h  waveSystem.h
header/battle/enemies/: enemy.h  enemyAbility.h  exp.h  goblin.h  goblinBoss.h  goblinMiniBoss.h  slime.h  slimeMiniBoss.h
header/battle/enemies/goblinBoss/: bodySlam.h  bulletSpray.h  goblinBoss.h
header/battle/gameStates/: gameState.h  playingState.h
header/battle/obstacles/: object.h  pillar.h
header/battle/player/: player.h  playerUI.h  weapon.h
header/battle/player/abilities/: ability.h  abilitySelectionUI.h  atomicBullet.h  basicSlash.h  blast.h  dash.h  energyBarrier.h  piercingShot.h
header/enemies/: enemy.h  goblin.h  slime.h
header/game/: battle.h  kingdom.h  states.h  statesManager.h  window.h
header/kingdom/: dynamicAsset.h  resourceManager.h  staticAsset.h
header/kingdom/buildings/: buildingManager.h
header/kingdom/buildings/dynamic/: animalFarm.h  carpenter.h  castle.h  dynamicAsset.h  farm.h  huts.h  storage.h
header/kingdom/menu/: buttonMenu.h  menu.h  resourceMenu.h
header/obstacles/: object.h
header/player/: player.h  weapon.h
header/player/abilities/: ability.h  basicSlash.h  blast.h  dash.h
source/: Makefile  ability.cpp  animation.cpp  collision.cpp  collisionManager.cpp  deltaTime.cpp  enemy.cpp  enemyPool.cpp  entity.cpp  game.cpp  gridSystem.cpp  main.cpp  menu.cpp  obstacles.cpp  partitions.cpp  play_game  player.cpp  pool.cpp  quadtree.cpp  slime.cpp  utility.cpp
source/battle/: animation.cpp  collision.cpp  collisionManager.cpp  deltaTime.cpp  entity.cpp  game.cpp  gridSystem.cpp  menu.cpp  partitions.cpp  pool.cpp  utility.cpp  waveSystem.cpp
source/battle/enemies/: enemy.cpp  enemyAbility.cpp  exp.cpp  goblin.cpp  goblinBoss.cpp  goblinMiniBoss.cpp  slime.cpp  slimeMiniBoss.cpp
source/battle/enemies/goblinBoss/: bodySlam.cpp  bulletSpray.cpp  goblinBoss.cpp
source/battle/obstacles/: object.cpp  pillar.cpp
source/battle/player/: player.cpp  playerUI.cpp  weapon.cpp
source/battle/player/abilities/: ability.cpp  abilitySelectionUI.cpp  (+6 more)
source/enemies/: enemy.cpp  goblin.cpp  slime.cpp
source/game/: battle.cpp  kingdom.cpp  statesManager.cpp  window.cpp
source/kingdom/: dynamicAsset.cpp  resourceManager.cpp  staticAsset.cpp
source/kingdom/buildings/: buildingManager.cpp
source/kingdom/menu/: buttonMenu.cpp  menu.cpp  resourceMenu.cpp
source/obstacles/: object.cpp
source/player/: player.cpp  weapon.cpp
source/player/abilities/: ability.cpp  basicSlash.cpp  blast.cpp  dash.cpp  player.cpp
(+7 files in other folders)
